# learnopengl-in-vscode

./: .gitignore  CMakeLists.txt  README.md  README_en.md
include/glad/: glad.h
shaders/: 02_fragment_shader.glsl  02_vertex_shader.glsl  04_vertex_shader.glsl  05_fragment_shader.glsl  05_vertex_shader.glsl  06_fragment_shader.glsl  06_vertex_shader.glsl  fragment_shader.glsl  vertex_shader.glsl
src/: 01_hello_opengl.cpp  02_vbo_vao_ebo.cpp  03_shader.cpp  glad.c  main.cpp  shader.cpp  shader.h
src/core/: imgui_layer.cpp  imgui_layer.h  mesh.cpp  mesh.h  shader.cpp  shader.h  window.cpp  window.h
src/lectures/: 01_hello_opengl.cpp  02_vbo_vao_ebo.cpp  03_shader.cpp  04_textures.cpp  05_transformation.cpp  06_3d_world.cpp
